# emb-project-grc

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
firmware/it2021_bms/: CMakeLists2.txt
firmware/it2021_bms/src/: main.c
